tambah heartBar, Level, posisi hero

--- a/game.html
+++ b/game.html
@@ -9,13 +9,19 @@
     <title>Zombie - Zone</title>
   </head>
   <body>
-    <div id="gameZone">
-      <div id="scoreZone" style="display: none;">
+    <div id="scoreZone" style="display: none;">
+      <div id="tabScore">
         <div class="score">SCORE : <span id="valueScore"></span></div>
+        <br />
+        <div class="level">LEVEL : <span id="valueLevel"></span></div>
       </div>
+      <div id="tabDarah"></div>
+    </div>
+    <div id="gameZone">
       <div id="uiZone">
         <div id="menuZone">
-          <h1 style="color:green;">ZOMBIE ZONE</h1><br>
+          <h1 style="color: green;">ZOMBIE ZONE</h1>
+          <br />
           <div class="buttonZone">
             <a id="btnMulai">Mulai</a>
             <a id="btnInfo">Info</a>
@@ -31,7 +37,7 @@
           </div>
         </div>
         <div id="gameOver" style="display: none;">
-		<h1> ANDA TERMAKAN ZOMBIE DAN TERINFEKSI!!!</h1>
+          <h1>ANDA TERMAKAN ZOMBIE DAN TERINFEKSI!!!</h1>
           <center>
             <a id="btnStart">Mulai</a> <a id="btnHome">Kembali</a>
           </center>
