Tambah Stage Moster Boss

--- a/game.html
+++ b/game.html
@@ -39,7 +39,13 @@
         <div id="gameOver" style="display: none;">
           <h1>ANDA TERMAKAN ZOMBIE DAN TERINFEKSI!!!</h1>
           <center>
-            <a id="btnStart">Mulai</a> <a id="btnHome">Kembali</a>
+            <a class="btnStart">Mulai</a> <a class="btnHome">Kembali</a>
+          </center>
+        </div>
+        <div id="gameWin" style="display: none;">
+          <h1>ANDA TELAH MENGALAHKAN BOSS DAN MENANG !!</h1>
+          <center>
+            <a class="btnStart">Mulai</a> <a class="btnHome">Kembali</a>
           </center>
         </div>
       </div>
